Updated front end to toggle room/chat menu

--- a/src/Main.css
+++ b/src/Main.css
@@ -76,14 +76,14 @@
 }
 
 .navButton:hover {
-  color: blue;
-  border-color: blue;
+  color: #0078ce;
+  border-color: #0078ce;
 
 }
 
 .chatButton:hover {
-  color: blue;
-  border-color: blue;
+  color: #0078ce;
+  border-color: #0078ce;
 }
 
 
