--- a/src/Info.css
+++ b/src/Info.css
@@ -8,6 +8,8 @@
   
 }
 
+
+
 .info {
   margin-left: 10px;
   color: white;
@@ -55,7 +57,7 @@
 }
 
 .thumbsi {
-  margin-left: 75px;
+  margin-right: 30px;
   color: #0078ce;
   font-size: 50px;
 
