--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,7 @@ body {
   background: #191919;
   width: 100%;
   height: 100px;
+  z-index: 5;
 
 }
 
@@ -25,6 +26,7 @@ body {
   font-size: 72px;
   padding: 10px;
   margin-left: 40px;
+
 }
 
 button {
