--- a/src/Sidenav.css
+++ b/src/Sidenav.css
@@ -1,9 +1,30 @@
-.sidenav{
-  width:20%;
+#sidenav{
+  width:18%;
   height: 100vh;
-  position: static;
+  /*sliding*/
+  position: fixed;
+  left:0;
+  top:0;
+  transition: transform .3s cubic-bezier(0, .52, 0, 1);
+
   background: #3a3a3a;
   display: block;
+  z-index: 4;
+}
+
+#sidenav.hide {
+  transform: translate3d(-30vw, 0, 0);
+}
+
+#sidenav.show {
+  transform: translate3d(0vw, 0, 0);
+  overflow: hidden;
+}
+
+.roomTitle {
+  margin-top: 120px;
+  font-size: 20px;
+  color: white;
 }
 
 .table1 {
@@ -25,7 +46,7 @@
 }
 
 .searchroom {
-  margin-top: 120px;
+  margin-top: 40px;
 }
 
 .plus {
@@ -60,4 +81,23 @@
   width: 160px;
   height: 20px;
   font-size: 16px;
+}
+
+.online {
+  color:#0078ce;
+}
+
+i {
+  float: right;
+}
+
+.onlineDot {
+  margin-bottom: 10px;
+  text-indent: 50px;
+  color: white;
+  font-size: 16px;
+  font-weight: bold;
+  height: 40px;
+  margin: auto;
+
 }
