--- a/src/Chat.css
+++ b/src/Chat.css
@@ -56,7 +56,7 @@ body{
   display: block;
   right:0;
   top:0;
-  transition: transform .3s cubic-bezier(0, .52, 0, 1);
+  transition: transform .8s cubic-bezier(.1, .52, .2, 1);
   z-index: 0; 
 
   margin-top:100px; 
