--- a/src/Sidenav.css
+++ b/src/Sidenav.css
@@ -5,7 +5,7 @@
   position: fixed;
   left:0;
   top:0;
-  transition: transform .3s cubic-bezier(0, .52, 0, 1);
+  transition: transform .8s cubic-bezier(.1, .52, .2, 1);
 
   background: #3a3a3a;
   display: block;
@@ -54,6 +54,7 @@
   font-size: 24px;
   float: left;
   margin-left: 35px;
+  cursor: pointer;
 }
 
 .sidescrollbox {
